tests/errors/runtime.SymbolNotFound.res
══╡ Name Error ╞══════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Cannot resolve requested value

  Identifier not found: 
      y

  ┃ File: tests/errors/runtime.SymbolNotFound.art
  ┃ Line: 2
  ┃ 
  ┃    1 ║  x: 2
  ┃    2 ║► print y + x
  ┃    3 ║  print "hello!"

  Hint: Perhaps you meant... type ?
                       or... hypot ?
                       or... type? ?